$Id: History,v 1.9 2000-04-20 16:49:45 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

April 20, 2000   G. Cosmo

- Reorganised comments for the Software Reference Manual.
- Moved inlined definition to .icc files, where needed.
  Created: G4SmartVoxelHeader.icc, G4SmartVoxelNode.icc,
           G4SmartVoxelProxy.icc, G4VoxelLimits.icc.

April 11, 2000   J. Allison

- Made virtual G4VisExtent G4VSolid::GetExtent() non-pure and implemented
    a default in terms of CalculateExtent.

January 19, 00       G. Cosmo              geommng-V01-00-00

Syncronized file versioning with HEAD (several CVS headers changed
due to the recent migration for ISO C++)

January 19, 00       J. Allison

G4DrawVoxels.cc:

Assured GetSlice(slice_no) is called for slice_no < no_slices.

November 30, 99      G. Cosmo              geommng-V00-01-01a

G4DrawVoxels.cc:

Fixed initialization of (const G4VPhysicalVolume*) in method
GetAbsoluteTransformation(). Fix needed for NT/VC++ compiler.

November 09, 99      J. Apostolakis        geommng-V00-01-01

G4VPhysicalVolume:
  i) Made G4RotationMatrix G4VPhysicalVolume::GetObjectRotation() const
      non-inline and moved it to source file from inline file.