@@ -1,4 +1,4 @@
-$Id: History,v 1.9 2000-04-20 16:49:45 gcosmo Exp $
+$Id: History,v 1.10 2000-06-06 13:18:51 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+June 06, 2000   G.Cosmo                    geommng-V01-01-00
+
+- G4DrawVoxels.hh: removed line '#define G4DrawVoxelsDebug' left in place
+  accidentally in the code...
 
 April 20, 2000   G. Cosmo
 
